WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165340
HTML Interactive Form Validation popovers do not show in iOS WKWebViews
https://bugs.webkit.org/show_bug.cgi?id=165340
Summary
HTML Interactive Form Validation popovers do not show in iOS WKWebViews
Chris Dumez
Reported
2016-12-02 14:47:27 PST
HTML Interactive Form Validation popovers do not show in iOS WKWebViews, only in MobileSafari.
Attachments
Patch
(3.79 KB, patch)
2016-12-02 14:55 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(3.87 KB, patch)
2016-12-02 15:07 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-12-02 14:48:55 PST
<
rdar://problem/29489966
>
Chris Dumez
Comment 2
2016-12-02 14:55:55 PST
Created
attachment 296004
[details]
Patch
Simon Fraser (smfr)
Comment 3
2016-12-02 15:00:14 PST
Comment on
attachment 296004
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=296004&action=review
> Source/WebCore/platform/ios/ValidationBubbleIOS.mm:123 > + } > + return nil;
Should we log if we don't find one, so that a 3rd party app developer gets some hint about why things aren't working?
Chris Dumez
Comment 4
2016-12-02 15:07:01 PST
Created
attachment 296007
[details]
Patch
WebKit Commit Bot
Comment 5
2016-12-02 16:22:22 PST
Comment on
attachment 296007
[details]
Patch Clearing flags on attachment: 296007 Committed
r209282
: <
http://trac.webkit.org/changeset/209282
>
WebKit Commit Bot
Comment 6
2016-12-02 16:22:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug