HTML Interactive Form Validation popovers do not show in iOS WKWebViews https://bugs.webkit.org/show_bug.cgi?id=165340 <rdar://problem/29489966>

Reviewed by Simon Fraser.

HTML Interactive Form Validation popovers do not show in iOS WKWebViews,
only in MobileSafari. To address the issue try to find an appropriate
UIViewController to present the popover when the client does not provide
a presenting view controller.

* platform/ValidationBubble.h:
* platform/ios/ValidationBubbleIOS.mm:
(WebCore::fallbackViewController):
(WebCore::ValidationBubble::setAnchorRect):
* platform/spi/ios/UIKitSPI.h:


Canonical link: https://commits.webkit.org/182958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209282 268f45cc-cd09-0410-ab3c-d52691b4dbfc