Source/WebCore/platform/spi/ios/UIKitSPI.h
@@ -29,6 +29,7 @@
 #import <UIKit/UIInterface_Private.h>
 #import <UIKit/UIPopoverPresentationController_Private.h>
 #import <UIKit/UIScreen_Private.h>
+#import <UIKit/UIViewController_Private.h>
 
 #else
 
@@ -62,6 +63,10 @@
 
 + (void)_setAlwaysAllowPopoverPresentations:(BOOL)flag;
 
+@end
+
+@interface UIViewController ()
++ (UIViewController *)viewControllerForView:(UIView *)view;
 @end
 
 #endif
